tests/baselines/reference/multipleBaseInterfaesWithIncompatibleProperties2(exactoptionalpropertytypes=true).errors.txt
multipleBaseInterfaesWithIncompatibleProperties2.ts(19,11): error TS2320: Interface 'AgentOptions' cannot simultaneously extend types 'AgentOptions' and 'ConnectionOptions'.
  Named property 'port' of types 'AgentOptions' and 'ConnectionOptions' are not identical.


==== multipleBaseInterfaesWithIncompatibleProperties2.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/62569
    
    namespace http {
      export interface TcpSocketConnectOpts {
        port: number;
      }
    
      export interface AgentOptions extends Partial<TcpSocketConnectOpts> {
        keepAlive?: boolean | undefined;
      }
    }
    
    namespace tls {
      export interface ConnectionOptions {
        port?: number | undefined;
      }
    }
    
    interface AgentOptions extends http.AgentOptions, tls.ConnectionOptions { // error under exactOptionalPropertyTypes
              ~~~~~~~~~~~~
!!! error TS2320: Interface 'AgentOptions' cannot simultaneously extend types 'AgentOptions' and 'ConnectionOptions'.
!!! error TS2320:   Named property 'port' of types 'AgentOptions' and 'ConnectionOptions' are not identical.
      maxCachedSessions?: number | undefined;
    }
    